Fixed minor layout issues on menu options on homepage

--- a/assets/sass/site/primary/_posts-and-pages.scss
+++ b/assets/sass/site/primary/_posts-and-pages.scss
@@ -263,7 +263,10 @@ p a {
 			@include mid {
 				width: 168px;
 			}
-			@include desk {
+			@media screen and (min-width: 1200px) {
+				width: 165px;
+			}
+			@media screen and (min-width: 1500px) {
 				width: 180px;
 			}
 			@media screen and (max-width: $xswidth) {
@@ -297,10 +300,16 @@ p a {
 			padding: 15px 15px;
 			margin: 0 0;
 			@include mid {
+				padding: 15px 8px;
+			}
+			@media screen and (min-width: 1100px) {
+				padding: 15px 10px;
+			}
+			@media screen and (min-width: 1350px) {
 				padding: 15px 15px;
 			}
-			@include desk {
-				padding: 15px 25px;
+			@media screen and (min-width: 1500px) {
+				padding: 15px 20px;
 			}
 			@media screen and (max-width: $xswidth) {
 				display: block;
